--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,27 @@
 @theme {
   --font-family-pretendard: 'Pretendard', sans-serif;
   --font-family-poppins: 'Poppins', sans-serif;
+
+  --color-primary-50: #669aff;
+  --color-primary-55: #4b8bff;
+  --color-secondary-50: #fba907;
+  --color-static-black: #000000;
+  --color-static-white: #ffffff;
+  --color-status-red: #ff6648;
+  --color-neutral-20: #f7f7f7;
+  --color-neutral-30: #f4f4f4;
+  --color-neutral-40: #e9e9ec;
+  --color-neutral-50: #d3d3d3;
+  --color-neutral-60: #ababab;
+  --color-neutral-70: #818181;
+  --color-neutral-80: #707070;
+  --color-neutral-90: #555555;
+  --color-neutral-100: #333333;
+  --color-neutral-110: #111111;
+  --color-neutral-120: #010101;
+  --color-coolGray-20: #f0f5fb;
+  --color-coolGray-50: #a3abbe;
+  --color-coolGray-80: #3e3f48;
 }
 
 @layer base {
