--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@import 'swiper/css';
 
 @font-face {
   font-family: 'Pretendard';
@@ -21,6 +22,7 @@
   --color-primary-50: #669aff;
   --color-primary-55: #4b8bff;
   --color-secondary-50: #fba907;
+  --color-secondary-10: #fff3d9;
   --color-static-black: #000000;
   --color-static-white: #ffffff;
   --color-status-red: #ff6648;
